k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nagp26-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nagp26-app
  template:
    metadata:
      labels:
        app: nagp26-app
    spec:
      containers:
        - name: nagp26-app
          image: nagp26_app:latest
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /api/employees
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/employees
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: nagp26-app
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nagp26-app
