k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nagp26-app
spec:
  ingressClassName: gce
  rules:
    - host: nagp26.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nagp26-app
                port:
                  number: 80
